--- a/templates/codereview.html
+++ b/templates/codereview.html
@@ -6,12 +6,12 @@
 		<div class="col-md-8">
 			<div class="card">
 				<div class="card-header">{{ .CodeTitle }}</div>
-				<div class="card-body" style="overflow-y: auto; max-height: 700px;">
+				<div class="card-body" style="overflow-y: auto; max-height: 750px;">
 					<pre><code>{{ .Code }}</code></pre>
 				</div>
 			</div>
 
-			<div class="mt-2">
+			<div class="mt-3">
 				<div class="form-floating">
 					<textarea class="form-control" placeholder="Leave a comment here" id="reviewComment"
 						style="height: 100px"></textarea>
@@ -19,7 +19,7 @@
 				</div>
 			</div>
 
-			<div class="btn-group mt-2" role="group">
+			<div class="btn-group my-3" role="group">
 				<button class="btn btn-success btn-lg" id="reviewAprove">Aprove</button>
 				<button class="btn btn-danger btn-lg" id="reviewReject">Reject</button>
 			</div>
