--- a/templates/codereview.html
+++ b/templates/codereview.html
@@ -13,7 +13,7 @@
 
 			<div class="mt-3">
 				<div class="form-floating">
-					<textarea class="form-control" placeholder="Leave a comment here" id="reviewComment"
+					<textarea class="form-control" placeholder="Leave a comment here." id="reviewComment"
 						style="height: 100px"></textarea>
 					<label for="reviewComment">Leave a comment here</label>
 				</div>
