--- a/templates/header.html
+++ b/templates/header.html
@@ -9,6 +9,7 @@
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
@@ -17,9 +18,13 @@
 <body>
 	<nav class="navbar bg-body-tertiary">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="/">
+			<a class="navbar-brand ms-3" href="/">
 				<img src="/favicon.ico" alt="Logo" width="40" class="d-inline-block align-text-center">
 				CrossPawn
 			</a>
+			<span class="navbar-text me-3">
+				<a href="/login"><i class="bi bi-person-fill"></i></a>
+				{{ .User }}
+			</span>
 		</div>
 	</nav>
