feat: jwtsign cli + admin login + more orm models

--- a/templates/codereview.html
+++ b/templates/codereview.html
@@ -15,7 +15,7 @@
 				<div class="form-floating">
 					<textarea class="form-control" placeholder="Leave a comment here." id="reviewComment"
 						style="height: 100px"></textarea>
-					<label for="reviewComment">Leave a comment here</label>
+					<label for="reviewComment">Leave a comment here.</label>
 				</div>
 			</div>
 
