--- a/templates/header.html
+++ b/templates/header.html
@@ -16,12 +16,28 @@
 </head>
 
 <body>
-	<nav class="navbar bg-body-tertiary">
+	<nav class="navbar navbar-expand-lg bg-body-tertiary">
 		<div class="container-fluid">
 			<a class="navbar-brand ms-3" href="/">
 				<img src="/favicon.ico" alt="Logo" width="40" class="d-inline-block align-text-center">
 				CrossPawn
 			</a>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="/login">Profile</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/codereview">Code Review</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/admin">Admin</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/manage">Manage</a>
+					</li>
+				</ul>
+			</div>
 			<span class="navbar-text me-3">
 				<a href="/login"><i class="bi bi-person-fill"></i></a>
 				{{ .User }}
