--- a/templates/manage.html
+++ b/templates/manage.html
@@ -1,7 +1,44 @@
 {{ template "header.html" . }}
 
-<h1>
-    AMOGUS
-</h1>
+<div class="container py-5 col-10 offset-md-1">
+	<ul class="list-group">
+		{{ range .Contests }}
+		<li
+			class="list-group-item {{ if not .ReviewActive }}list-group-item-secondary{{ end }} d-flex justify-content-between">
+			<div>
+				<div class="d-flex">
+					<h5>{{ .EjudgeID }} <i class="bi bi-arrow-bar-right"></i></h5>
+					{{ .EjudgeName }}
+				</div>
+				<div>
+					<text class="font-monospace">
+						<i class="bi bi-arrow-clockwise"></i>
+						{{ .LastUpdateTime }}
+					</text>
+					<span class="badge text-bg-warning ms-2">{{ .EjudgeProblemsList }}</span>
+				</div>
+			</div>
+			<div>
+				<form method="POST" action="/manage/flip">
+					<input type="hidden" name="ejContestID" value="{{ .EjudgeID }}">
+					<button type="submit" class="btn btn-outline-info">
+						<i class="bi {{ if .ReviewActive }}bi-pause-fill{{ else }}bi-play-fill{{ end }}"></i>
+					</button>
+				</form>
+			</div>
+		</li>
+		{{ end }}
+
+		<li class="list-group-item">
+			<form class="d-flex justify-content-between" method="POST" action="/manage">
+				<input type="number" class="form-control" placeholder="Add new contest by ID" name="ejContestID"
+					required>
+				<button type="submit" class="btn btn-outline-success ms-3">
+					<i class="bi bi-plus-lg"></i>
+				</button>
+			</form>
+		</li>
+	</ul>
+</div>
 
 {{ template "footer.html" . }}
