--- a/templates/manage.html
+++ b/templates/manage.html
@@ -13,9 +13,10 @@
 				<div>
 					<text class="font-monospace">
 						<i class="bi bi-arrow-clockwise"></i>
-						{{ .LastUpdateTime }}
+						{{ .UpdatedAt }}
 					</text>
 					<span class="badge text-bg-warning ms-2">{{ .EjudgeProblemsList }}</span>
+					<span class="badge text-bg-info ms-2">{{ .MaxRunID }}</span>
 				</div>
 			</div>
 			<div>
