feat: pretty alerts + user auth + jwt exp check middleware

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -6,6 +6,7 @@
 			<div class="card">
 				<div class="card-body">
 					<form action="/admin" method="POST">
+						<legend>Admin Panel</legend>
 						<div class="mb-3">
 							<label for="jwt" class="form-label">JWT</label>
 							<input type="password" class="form-control" id="jwt" name="jwt" required>
