--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
 			<div class="card">
 				<div class="card-body">
 					<form action="/" method="POST">
+						<legend>Code review</legend>
 						<div class="mb-3">
 							<label for="ejContest" class="form-label">Ejudge contest ID</label>
 							<input type="number" class="form-control" id="ejContest" name="ejContest" required>
