--- a/templates/manage.html
+++ b/templates/manage.html
@@ -1,6 +1,6 @@
 {{ template "header.html" . }}
 
-<div class="container py-5 col-10 offset-md-1">
+<div class="container my-5 col-8 offset-md-2">
 	<ul class="list-group">
 		{{ range .Contests }}
 		<li
