--- a/templates/manage.html
+++ b/templates/manage.html
@@ -16,7 +16,7 @@
 						{{ .UpdatedAt }}
 					</text>
 					<span class="badge text-bg-warning ms-2">{{ .EjudgeProblemsList }}</span>
-					<span class="badge text-bg-info ms-2">{{ .MaxRunID }}</span>
+					<span class="badge text-bg-info ms-2">Max ID {{ .MaxRunID }}</span>
 				</div>
 			</div>
 			<div>
