--- a/templates/header.html
+++ b/templates/header.html
@@ -25,7 +25,7 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" href="/login">Profile</a>
+						<a class="nav-link" href="/profile">Profile</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="/codereview">Code Review</a>
