--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,15 +13,14 @@
 							</h5>
 						</div>
 						<div class="mb-3 d-flex">
-							<!-- TODO: add stats -->
 							<h5>
 								<span class="badge text-bg-success">
-									<i class="bi bi-patch-plus-fill"></i> 0
+									<i class="bi bi-patch-plus-fill"></i> {{ .UserAproveCount }}
 								</span>
 							</h5>
 							<h5 class="ms-2">
 								<span class="badge text-bg-danger">
-									<i class="bi bi-patch-minus-fill"></i> 0
+									<i class="bi bi-patch-minus-fill"></i> {{ .UserRejectCount }}
 								</span>
 							</h5>
 						</div>
