chore: go.mod update + remove poll_batch_size

--- a/templates/manage.html
+++ b/templates/manage.html
@@ -16,7 +16,7 @@
 						{{ .UpdatedAt }}
 					</text>
 					<span class="badge text-bg-warning ms-2">{{ .EjudgeProblemsList }}</span>
-					<span class="badge text-bg-info ms-2">Max ID {{ .MaxRunID }}</span>
+					<span class="badge text-bg-info ms-2">0 runs in review</span> <!--TODO: add runs in review count-->
 				</div>
 			</div>
 			<div>
